--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@angular/cli": "^18.2.2",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.2"
   }
 }
