--- a/revalida-shopping-app/package.json
+++ b/revalida-shopping-app/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "chart.js": "^2.8.0",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
+    "simple-datatables": "^7.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -28,6 +30,7 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
