Added admin products page, and products table, updated admin-dboard

--- a/revalida-shopping-app/angular.json
+++ b/revalida-shopping-app/angular.json
@@ -41,7 +41,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+               "node_modules/simple-datatables/dist/style.css"
             ],
             "scripts": []
           },
@@ -102,7 +103,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/simple-datatables/dist/style.css"
             ],
             "scripts": []
           }
