--- a/revalida-shopping-app/package.json
+++ b/revalida-shopping-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "chart.js": "^2.8.0",
+    "gridjs": "^6.2.0",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
     "simple-datatables": "^7.1.2",
