Experimenting with different datatable packages

--- a/revalida-shopping-app/package.json
+++ b/revalida-shopping-app/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "chart.js": "^2.8.0",
+    "datatables.net": "^2.1.5",
+    "datatables.net-dt": "^2.1.5",
     "gridjs": "^6.2.0",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
-    "simple-datatables": "^7.1.2",
+    "simple-datatables": "^9.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -32,6 +34,7 @@
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
     "@types/chart.js": "^2.9.41",
+    "@types/datatables.net": "^1.12.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
