--- a/revalida-shopping-app/angular.json
+++ b/revalida-shopping-app/angular.json
@@ -39,12 +39,15 @@
               }
             ],
             "styles": [
+              "node_modules/datatables.net-dt/css/dataTables.dataTables.css",
               "src/styles.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-               "node_modules/simple-datatables/dist/style.css"
+              "node_modules/simple-datatables/src/css/style.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/datatables.net/js/dataTables.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -101,12 +104,15 @@
               }
             ],
             "styles": [
+              "node_modules/datatables.net-dt/css/dataTables.dataTables.css",
               "src/styles.scss",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/simple-datatables/dist/style.css"
+              "node_modules/simple-datatables/src/css/style.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/datatables.net/js/dataTables.js"
+            ]
           }
         }
       }
