Added update, and deleted selected operations on products table

--- a/revalida-shopping-app/package.json
+++ b/revalida-shopping-app/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.2.3",
     "chart.js": "^2.8.0",
     "datatables.net": "^2.1.5",
     "datatables.net-dt": "^2.1.5",
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/bootstrap": "^5.2.3",
     "@types/chart.js": "^2.9.41",
     "@types/datatables.net": "^1.12.0",
     "@types/jasmine": "~5.1.0",
