Added file saving functionality with local folder

--- a/revalida-shopping-app/angular.json
+++ b/revalida-shopping-app/angular.json
@@ -77,6 +77,8 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+          },
           "configurations": {
             "production": {
               "buildTarget": "revalida-shopping-app:build:production"
