--- a/revalida-shopping-app/package.json
+++ b/revalida-shopping-app/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dev": "ng serve --proxy-config proxyconfig.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,9 +23,12 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.3",
     "chart.js": "^2.8.0",
+    "cors": "^2.8.5",
     "datatables.net": "^2.1.5",
     "datatables.net-dt": "^2.1.5",
+    "express": "^4.19.2",
     "gridjs": "^6.2.0",
+    "multer": "^1.4.5-lts.1",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
     "simple-datatables": "^9.1.0",
